# planetarium

./: .gitattributes  .gitignore  .markdownlint.json  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  QWEN.md  README.md  check_output.txt  check_output_final.txt  result.txt
.agent/: PHASE_4_DATA_FLOW.md  PHASE_4_QUICK_STATUS.md  PHASE_4_VERIFICATION.md
.agent/rules/: agent-lifecycle.md  architecture-sync.md  bevy-ecs-guide.md  language-preferences.md  post-task-quality-check.md  rust-semver-guide.md  workflow_structure_standards.md
.agent/skills/skill-creator/: SKILL.md
.agent/skills/skill-creator/references/: output-patterns.md
.kilocode/rules/: versioning-and-release-sop.md
.kiro/specs/game-launcher-template/: design.md  requirements.md  tasks.md
.rules/: language-preferences.md  rust-semver-guide.md
assets/: assets.ron  assets.toml
assets/config/: dev_config.ron
assets/configs/: default.toml  gameplay.ron
assets/locales/en-US/text/: menu.ftl
assets/locales/ru-RU/text/: menu.ftl
crates/launcher/: Cargo.toml  build.rs
crates/launcher/src/: diagnostics.rs  lib.rs  utils.rs
crates/launcher/src/boot/: localization.rs  mod.rs  paths.rs  theme.rs
crates/launcher/src/config/: cli.rs  metadata.rs  mod.rs  settings.rs
crates/launcher/src/loading/: assets.rs  components.rs  mod.rs  systems.rs
crates/launcher/src/splash/: components.rs  mod.rs  systems.rs
crates/launcher/src/states/: mod.rs  state.rs
crates/launcher/src/utils/: mod.rs  single_instance.rs
crates/localization/: Cargo.toml
crates/localization/src/: lib.rs  utils.rs
crates/menu/: Cargo.toml  build.rs
crates/menu/src/: error.rs  events.rs  lib.rs
crates/menu/src/main_menu/: mod.rs  systems.rs
crates/menu/src/modal/: mod.rs
crates/menu/src/pause/: input.rs  mod.rs  settings_bridge.rs  state.rs  systems.rs  ui.rs
crates/menu/src/settings/: components.rs  interaction.rs  layout.rs  mod.rs  pending.rs  pending_systems.rs  systems.rs  ui.rs  validation.rs
crates/menu/src/settings/tabs/: audio.rs  controls.rs  general.rs  graphics.rs  mod.rs
crates/menu/src/widgets/: base.rs  buttons.rs  components.rs  dropdowns.rs  mod.rs  sliders.rs
crates/theme/: Cargo.toml  build.rs
crates/theme/src/: lib.rs  metrics.rs
crates/transitions/: Cargo.toml
crates/transitions/src/: lib.rs
docs/: CONFIG_USAGE.md
docs/architecture/: architecture_diagrams_guide.md  bevy_architecture_diagram.mermaid  bevy_architecture_guide.md
docs/development/: TODO.md  research.md
docs/development/analizes/: analize-002.md  analize-003-deps.md  analize-004.md  analize-005-arch.md
docs/development/architecture/: bevy_architecture_diagram.mermaid  bevy_architecture_guide.md  ecs_interaction_diagram.mermaid  file_structure_diagram.mermaid  lifecycle_sequence_diagram.mermaid  plugin_architecture_diagram.mermaid  state_flow_diagram.mermaid
docs/development/architecture-migration/: cleanup_steps.md  plan.md  tasks.md
docs/development/config/: 2026-01-30-config-system-tasks.md  spec.ru.md  tasks.md
docs/development/config/old/: 2026-01-30-config-system-design.md  spec.md  (+1 more)
docs/development/launching/: PHASE_4_DATA_FLOW.md  PHASE_4_QUICK_STATUS.md  PHASE_4_VERIFICATION.md  plan.md  specs.md  specs.ru.md  tasks.md
docs/development/localization/: tasks.md
docs/development/main-menu/: main_menu_overhaul_plan.md  plan.md  specs.md  specs.ru.md  tasks.md
docs/development/pause-menu/: plan.md  tasks.md
docs/development/research/: plan.md  tasks.md
docs/plans/: 2026-01-29-launch-sequence-design.md  plan.md
docs/specs/: launching-game.md  launching-game.ru.md  launching.md  launching.ru.md
docs/tasks/: 2026-01-30-config-system-tasks.md  launch-sequence-tasks.md
examples/: template_plugin.rs
examples/free_camera/: Cargo.toml
examples/project4/: Cargo.toml
examples/project4/src/: accumulate_input.rs  cameras.rs  main.rs  player.rs  world.rs
specs/: launching.md  launching.ru.md
src/: constants.rs  lib.rs  main.rs  plugin.rs
src/assets/: mod.rs
src/components/: mod.rs  world.rs
src/config/: build_mode.rs  gameplay.rs  metadata.rs  mod.rs  paths.rs  platform_paths.rs  settings.rs  validation.rs
src/core/: cli.rs  localization.rs  mod.rs  single_instance.rs  states.rs
src/core/assets/: mod.rs
src/core/config/: metadata.rs  mod.rs  paths.rs  settings.rs
src/core/localization/: mod.rs  systems.rs
src/entities/: mod.rs
src/framework/: assets.rs  boot.rs  diagnostics.rs  error.rs  loading.rs  mod.rs  plugin.rs  splash.rs  utils.rs
src/framework/audio/: mod.rs  resources.rs  systems.rs
src/framework/camera/: mod.rs
src/framework/loading/: assets.rs  mod.rs  resources.rs  systems.rs
src/framework/localization/: mod.rs  systems.rs
src/framework/menu/: events.rs  mod.rs  reactive.rs  screen.rs
src/framework/settings/: interaction.rs  mod.rs  model.rs  pending.rs  pending_systems.rs  systems.rs  ui.rs  validation.rs
src/framework/splash/: mod.rs  resources.rs  systems.rs
src/framework/states/: mod.rs  state.rs  transition.rs
src/framework/ui/: fading.rs  mod.rs
src/game/: mod.rs  plugin.rs  world.rs
src/game/config/: mod.rs  validation.rs
src/game/pause_menu/: components.rs  mod.rs  settings_bridge.rs  systems.rs
src/game/systems/: cleanup.rs  gameplay.rs  setup.rs
src/launcher/: boot.rs  config.rs  diagnostics.rs  error.rs  loading.rs  mod.rs  plugin.rs  splash.rs  states.rs  traits.rs
src/launcher/menu/: layout.rs  mod.rs  reactive.rs  screen.rs  settings.rs  widgets.rs
src/resources/: mod.rs  save_data.rs  settings.rs
src/scene/: mod.rs
src/scene/world/: floor.rs  mod.rs
src/states/: boot.rs  gameplay.rs  loading.rs  main_menu.rs  mod.rs  paused.rs  settings.rs  splash.rs
src/systems/: cleanup.rs  gameplay.rs  mod.rs  setup.rs
src/ui/: buttons.rs  fading.rs  mod.rs  theme.rs
src/ui/theme/: colors.rs  constants.rs  metrics.rs  mod.rs
src/utils/: mod.rs  single_instance.rs
src/world/: floor.rs  mod.rs
tests/: diagnostics_integration.rs  menu_navigation.rs  pause_menu_navigation.rs  widgets_integration.rs
(+56 files in other folders)
