[package]
name = "planetarium"
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
readme = "README.md"
description = "A planetarium simulation built with Bevy game engine."
license = "MIT"
homepage = "https://teratron.github.io/planetarium"
documentation = "https://teratron.github.io/planetarium/docs"
repository = "https://github.com/teratron/planetarium"
keywords = ["rust", "bevy", "game", "simulation", "planetarium"]
categories = ["games", "simulation"]
exclude = ["examples/*", "docs/*", "tests/*", "target/*"]

[lib]
name = "planetarium"
path = "src/lib.rs"

[[bin]]
name = "planetarium"
path = "src/main.rs"

[dependencies]
bevy = "0.18.0"
toml = "0.9.11"
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
fluent-bundle = "0.16.0"
intl-memoizer = "0.5"
unic-langid = "0.9.5"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "registry",
    "env-filter",
] }
tracing = "0.1"

[dev-dependencies]
dotenvy = "0.15.7"

[workspace]
resolver = "2"
members = ["examples/*"]

[[example]]
name = "hello"
path = "examples/hello.rs"
doc-scrape-examples = false

[package.metadata.example.hello]
name = "Hello"
description = "A quick start guide example demonstrating the basic features."
category = "Getting Started Guide"
wasm = false
