[package]
name = "planetarium"
version = "0.3.1"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
readme = "README.md"
description = "A planetarium simulation built with Bevy game engine."
license = "MIT"
homepage = "https://teratron.github.io/planetarium"
documentation = "https://teratron.github.io/planetarium/docs"
repository = "https://github.com/teratron/planetarium"
keywords = ["rust", "bevy", "game", "simulation", "planetarium"]
categories = ["games", "simulation"]
include = ["assets/**/*", "LICENSE"]
exclude = ["examples", "docs", "tests", "target/*"]

[lib]
name = "planetarium"
path = "src/lib.rs"

[[bin]]
name = "planetarium"
path = "src/main.rs"

[dependencies]
bevy = "0.18.0"
ron = "0.12.0"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
fluent-bundle = "0.16.0"
intl-memoizer = "0.5"
unic-langid = "0.9.5"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[workspace]
resolver = "2"
members = []
