[workspace]
resolver = "2"
members = [
    "crates/launcher",
    "crates/menu",
    "crates/localization",
    "crates/theme",
    "crates/transitions",
]

# Default members - only build game by default
default-members = ["."]

[package]
name = "planetarium"
version = "0.3.2"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
readme = "README.md"
description = "A planetarium simulation built with Bevy game engine."
license = "MIT"
homepage = "https://teratron.github.io/planetarium"
documentation = "https://teratron.github.io/planetarium/docs"
repository = "https://github.com/teratron/planetarium"
keywords = ["rust", "bevy", "game", "simulation", "planetarium"]
categories = ["games", "simulation"]
include = ["assets/**/*", "LICENSE"]
exclude = ["examples", "docs", "tests", "target/*"]


[lib]
name = "planetarium"
path = "src/lib.rs"

[[bin]]
name = "planetarium"
path = "src/main.rs"

[workspace.package]
version = "0.3.2"
edition = "2024"
rust-version = "1.93"
license = "MIT"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]

[workspace.dependencies]
# Core dependencies
bevy = { version = "0.18.0", default-features = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Framework crates (internal)
launcher = { path = "crates/launcher" }
menu = { path = "crates/menu" }
localization = { path = "crates/localization" }
theme = { path = "crates/theme" }
transitions = { path = "crates/transitions" }

# Specialized dependencies
fluent-bundle = "0.16.0"
intl-memoizer = "0.5"
unic-langid = "0.9.5"
clap = { version = "4.5.58", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
ron = "0.12.0"

[dependencies]
# Bevy
bevy.workspace = true
serde.workspace = true
ron.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Framework crates
launcher.workspace = true
menu.workspace = true
localization.workspace = true
theme.workspace = true
transitions.workspace = true

# CLI
clap.workspace = true
strum.workspace = true
strum_macros.workspace = true

# Localization
fluent-bundle.workspace = true
intl-memoizer.workspace = true
unic-langid.workspace = true

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
