[package]
name = "menu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Menu system for Bevy games"
keywords = ["bevy", "game", "menu", "ui"]
categories = ["game-development"]
build = "build.rs"

[dependencies]
bevy.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

# Internal dependencies
launcher = { workspace = true }
theme = { workspace = true, optional = true }
localization = { workspace = true, optional = true }
transitions = { workspace = true }

# External dependencies
fluent-bundle = { workspace = true }

[features]
default = ["theme", "localization"]
theme = ["dep:theme"]
localization = ["dep:localization"]

[build-dependencies]
glob = "0.3"
walkdir = "2"
